--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       image: ubuntu-2004:current
     resource_class: medium
     steps:
+      - run: apt install python3.8-venv
       - checkout
       - run: make test
 workflows:
