--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,16 @@ jobs:
       - run: sudo apt install python3.8-venv
       - checkout
       - run: make test
+  buildandtest_win_latest:
+    machine:
+      image: windows-server-2022-gui:current
+    resource_class: windows.medium
+    steps:
+      - checkout
+      - run: python -m pip install .
+      - run: python -m pytest
 workflows:
   main:
     jobs:
       - buildandtest_linux_latest
+      - buildandtest_win_latest
