--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
       - checkout
       - run: python -m pip install pytest flake8
       - run: python -m pip install .
+      - run: python -m flake8 -v --max-complexity=20 src tests
       - run: python -m pytest
 workflows:
   main:
