--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - run: sudo apt install python3.8-venv
       - checkout
-      - run: make test
+      - run: make test-pkg
   buildandtest_win_latest:
     machine:
       image: windows-server-2022-gui:current
